# cppbackend

.github/workflows/: main.yml
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/: CMakeLists.txt
sprint1/problems/cafeteria/solution/src/: cafeteria.h  hotdog.h  ingredients.h  logger.h  main.cpp  order_bread.h  order_hotdog.h  order_sausage.h
sprint1/problems/final_task/solution/: CMakeLists.txt
sprint1/problems/final_task/solution/src/: http_server.cpp  json_atribute.h  json_loader.cpp  json_response.cpp  json_response.h  main.cpp
sprint1/problems/map_json/solution/: CMakeLists.txt
sprint1/problems/map_json/solution/src/: json_loader.cpp  request_handler.cpp  request_handler.h
sprint1/problems/radio/solution/: CMakeLists.txt  README.md
sprint1/problems/radio/solution/src/: client.h  main.cpp  server.h  udp_base.h
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/: CMakeLists.txt
sprint1/problems/seabattle/solution/src/: client.h  main.cpp  server.h  tcp_instance.h
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/Hello_Webserver/less_10/src/: main.cpp
sprint1/samples/Hello_Webserver/less_12/: CMakeLists.txt
sprint1/samples/Hello_Webserver/less_12/src/: Hamburger.h  Logger.h  Order.h  Restaurant.h  main.cpp
sprint1/samples/Hello_Webserver/less_13/: CMakeLists.txt
sprint1/samples/Hello_Webserver/less_13/src/: Hamburger.h  Logger.h  Order.h  Restaurant.h  ThreadChecker.h  main.cpp
sprint1/samples/Hello_Webserver/less_14/src/: main.cpp
sprint1/samples/Hello_Webserver/less_15/src/: main.cpp
sprint1/samples/Hello_Webserver/less_16/: CMakeLists.txt
sprint1/samples/Hello_Webserver/less_16/src/: main.cpp
sprint1/samples/Hello_Webserver/less_17_18/src/: listener.h  session.h
sprint1/samples/Hello_Webserver/less_3/: CMakeLists.txt
sprint1/samples/Hello_Webserver/less_3/src/: main.cpp
sprint1/samples/Hello_Webserver/less_4/: CMakeLists.txt
sprint1/samples/Hello_Webserver/less_4/src/: Robot.h  main.cpp
sprint1/samples/Hello_Webserver/less_9/: CMakeLists.txt
sprint1/samples/Hello_Webserver/less_9/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt
sprint1/samples/tcp-udp/src/: CMakeLists.txt  main.cpp
sprint1/samples/tcp-udp/src/TCPClient/: CMakeLists.txt  main.cpp
sprint1/samples/tcp-udp/src/TCPServer/: CMakeLists.txt  main.cpp
sprint1/samples/tcp-udp/src/UDPClient/: CMakeLists.txt
sprint1/samples/tcp-udp/src/UDPServer/: CMakeLists.txt
sprint2/problems/command_line/solution/: CMakeLists.txt
sprint2/problems/command_line/solution/src/: authorization_checker.h  beast.h  default_handler.cpp  default_handler.h  get_handler.cpp  get_handler.h  head_handler.h  json_response.cpp  main.cpp  model.cpp  model.h  post_handler.cpp  request_handler.cpp  request_handler.h  staticfile_loader.cpp  staticfile_loader.h
sprint2/problems/game_state/solution/: Dockerfile
sprint2/problems/game_state/solution/src/: authorization_checker.h  content_type.h  default_handler.cpp  get_handler.cpp  head_handler.h  json_response.cpp  model.cpp  (+5 more)
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/: Tokenizer.h  boost_json.cpp  default_handler.cpp  default_handler.h  get_handler.cpp  get_handler.h  head_handler.cpp  head_handler.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  json_response.h  main.cpp  model.h  post_handler.cpp  post_handler.h  request_handler.cpp  request_handler.h  requests.h  staticfile_loader.cpp  staticfile_loader.h
sprint2/problems/join_game/solution/static/js/: game.js
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  README.md
sprint2/problems/static_content/solution/: Dockerfile
sprint3/problems/ammo/solution/: ammo.txt
sprint3/problems/find_return/solution/: Dockerfile
sprint3/problems/flamegraph/solution/: CMakeLists.txt  shoot.py
sprint3/problems/gather/solution/: Dockerfile
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/htmldecode/solution/: CMakeLists.txt
sprint3/problems/static_lib/: CMakeLists.txt
sprint3/problems/static_lib/solution/: Dockerfile
sprint3/problems/static_lib/solution/src/: content_type.h  default_handler.cpp  head_handler.h  json_response.h  requests.h  ticker.h
sprint3/problems/static_lib/solution/src/model/: CMakeLists.txt  game.cpp  game_map.h  game_session.h  model_loader.cpp  point.h
sprint3/problems/static_lib/src/: authorization_checker.h  game_map.cpp  game_session.cpp  main.cpp  model.cpp  model.h  player.h  post_handler.h
sprint3/problems/static_lib/src/model/: building.h  direction.h  game.h
sprint3/problems/urldecode/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/urlencode/solution/: CMakeLists.txt  conanfile.txt
(+94 files in other folders)
